feat: v1.1.0 - unificacao completa addon Fastchannel
Novas telas HTML5: de-para.html (avancada), depara.html (original), precos.html
Servlet: 34 servicos registrados (+DePara 9, Estoque 4, Precos 5)
FCDeparaService unificado (Windows NTFS case-insensitivity fix)
Menu atualizado com De-Para, Estoque e Precos
26 erros de compilacao corrigidos (compat Java 8)
56 testes JUnit passando (servlet, JSON, HTTP, DePara)
Gradle wrapper, dbscripts V3-V7, CHANGELOG documentado

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>